# graduate-research

./: 0410.md  CLAUDE.md  PROGRESS.md  タグ規則.md  卒業研究.md
emotion-vectors/: .gitignore  CLAUDE.md  delete_incomplete.py  fix.py  main.py  pyproject.toml
emotion-vectors/config/: emotions.json  emotions_full.json  topics.json  topics_full.json
emotion-vectors/notebooks/colab/: generate_colab.ipynb
emotion-vectors/notebooks/ec2/: run_generate.sh  setup_ec2.sh
emotion-vectors/notebooks/kaggle/: generate_kaggle.ipynb
emotion-vectors/notebooks/labpc/: Dockerfile  GPU使用申請.md  monitor.sh  run.sh  run_docker.sh  setup.sh  test_docker.sh
emotion-vectors/notebooks/local/: run_local.sh
emotion-vectors/src/: analyze.py  check_env.py  extract.py  generate.py
個人勉強/: 0411_memo.md  0413_memo.md  0415_memo.md  研究テーマまとめ.md  研究テーマ模索.md
